Update Assignment_week_9 & 10_Raghuwanshi_Prashant_DSC540.ipynb

--- a/Assignment_DSC540/Assignment_week_9 & 10_Raghuwanshi_Prashant_DSC540.ipynb
+++ b/Assignment_DSC540/Assignment_week_9 & 10_Raghuwanshi_Prashant_DSC540.ipynb
@@ -801,10 +801,10 @@
    "outputs": [],
    "source": [
     "import twitter\n",
-    "api = twitter.Api(consumer_key='BvAZWpZjb87Bv4OSFjsOdxwvy',\n",
-    "  consumer_secret='HYQ1FPShH4B0lISBPmYLzcHGAnsc2GNOI89PpvVwbzRoPlhidU',\n",
-    "    access_token_key='1453146427224383489-yAo1gc4dyrEdkQIja5ZYZm7JFoagM6',\n",
-    "    access_token_secret='E0k0QzZUC8Ily8ZqKAkme6T97jreyzriHLEyyBz1asm9V')"
+    "api = twitter.Api(consumer_key='',\n",
+    "  consumer_secret='',\n",
+    "    access_token_key='',\n",
+    "    access_token_secret='')"
    ]
   },
   {
