--- a/Project_DSC540/Project_Milestone_2_Raghuwanshi_Prashant_DSC540.ipynb
+++ b/Project_DSC540/Project_Milestone_2_Raghuwanshi_Prashant_DSC540.ipynb
@@ -37,7 +37,7 @@
     "}\n",
     "headers = {\n",
     "  'Accepts': 'application/json',\n",
-    "  'X-CMC_PRO_API_KEY': 'c6d563eb-5020-4805-822e-422c3a9b018c',\n",
+    "  'X-CMC_PRO_API_KEY': '',\n",
     "}\n",
     "\n",
     "session = Session()\n",
